--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,19 +7,5 @@ Design by Tom Johnson, modified by Jim Pivarski and Peter Hansen. <br />
                 </div>
             </div>
 </footer>
+<script src="js/katex_render.js"></script>
 
-$("script[type='math/tex']").replaceWith(
-  function(){
-    var tex = $(this).text();
-    return "<span class=\"inline-equation\">" + 
-           katex.renderToString(tex) +
-           "</span>";
-});
-
-$("script[type='math/tex; mode=display']").replaceWith(
-  function(){
-    var tex = $(this).text();
-    return "<div class=\"equation\">" + 
-           katex.renderToString("\\displaystyle "+tex) +
-           "</div>";
-});
