--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,5 +7,5 @@ Design by Tom Johnson, modified by Jim Pivarski and Peter Hansen. <br />
                 </div>
             </div>
 </footer>
-<script src={{ "js/katex_render.js " | prepend: site.baseurl }}></script>
+<script src={{ "/js/katex_render.js " | prepend: site.baseurl }}></script>
 
